logs/mrsd_ros_tutorials/build.make.245.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:80:25: error: ‘apriltags’ does not name a type
   void apriltagCB(const apriltags::AprilTagDetections::ConstPtr& msg)
                         ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:80:54: error: expected unqualified-id before ‘::’ token
   void apriltagCB(const apriltags::AprilTagDetections::ConstPtr& msg)
                                                      ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:80:54: error: expected ‘)’ before ‘::’ token
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:80:36: error: expected ‘;’ at end of member declaration
   void apriltagCB(const apriltags::AprilTagDetections::ConstPtr& msg)
                                    ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:80:54: error: ‘ConstPtr’ in namespace ‘::’ does not name a type
   void apriltagCB(const apriltags::AprilTagDetections::ConstPtr& msg)
                                                      ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In constructor ‘ImageConverter::ImageConverter()’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:55:5: error: ‘apriltag_sub’ was not declared in this scope
     apriltag_sub = it_.subscribe("/apriltags/detections", 1, &ImageConverter::apriltagCB, this);
     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:55:95: error: no matching function for call to ‘image_transport::ImageTransport::subscribe(const char [22], int, void (ImageConverter::*)(...), ImageConverter* const)’
     apriltag_sub = it_.subscribe("/apriltags/detections", 1, &ImageConverter::apriltagCB, this);
                                                                                               ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:55:95: note: candidates are:
In file included from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:4:0:
/opt/ros/indigo/include/image_transport/image_transport.h:74:14: note: image_transport::Subscriber image_transport::ImageTransport::subscribe(const string&, uint32_t, const boost::function<void(const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&)>&, const VoidPtr&, const image_transport::TransportHints&)
   Subscriber subscribe(const std::string& base_topic, uint32_t queue_size,
              ^
/opt/ros/indigo/include/image_transport/image_transport.h:74:14: note:   no known conversion for argument 4 from ‘ImageConverter* const’ to ‘const VoidPtr& {aka const boost::shared_ptr<void>&}’
/opt/ros/indigo/include/image_transport/image_transport.h:82:14: note: image_transport::Subscriber image_transport::ImageTransport::subscribe(const string&, uint32_t, void (*)(const ImageConstPtr&), const image_transport::TransportHints&)
   Subscriber subscribe(const std::string& base_topic, uint32_t queue_size,
              ^
/opt/ros/indigo/include/image_transport/image_transport.h:82:14: note:   no known conversion for argument 3 from ‘void (ImageConverter::*)(...)’ to ‘void (*)(const ImageConstPtr&) {aka void (*)(const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&)}’
/opt/ros/indigo/include/image_transport/image_transport.h:95:14: note: template<class T> image_transport::Subscriber image_transport::ImageTransport::subscribe(const string&, uint32_t, void (T::*)(const ImageConstPtr&), T*, const image_transport::TransportHints&)
   Subscriber subscribe(const std::string& base_topic, uint32_t queue_size,
              ^
/opt/ros/indigo/include/image_transport/image_transport.h:95:14: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:55:95: note:   candidate expects 2 arguments, 1 provided
     apriltag_sub = it_.subscribe("/apriltags/detections", 1, &ImageConverter::apriltagCB, this);
                                                                                               ^
In file included from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:4:0:
/opt/ros/indigo/include/image_transport/image_transport.h:106:14: note: template<class T> image_transport::Subscriber image_transport::ImageTransport::subscribe(const string&, uint32_t, void (T::*)(const ImageConstPtr&), const boost::shared_ptr<X>&, const image_transport::TransportHints&)
   Subscriber subscribe(const std::string& base_topic, uint32_t queue_size,
              ^
/opt/ros/indigo/include/image_transport/image_transport.h:106:14: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:55:95: note:   candidate expects 2 arguments, 1 provided
     apriltag_sub = it_.subscribe("/apriltags/detections", 1, &ImageConverter::apriltagCB, this);
                                                                                               ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:56:5: error: ‘kinect_apriltag_tf’ was not declared in this scope
     kinect_apriltag_tf = nh.advertiseService("ImageConverter", &ImageConverter::transformCB, this);
     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:56:65: error: ‘transformCB’ is not a member of ‘ImageConverter’
     kinect_apriltag_tf = nh.advertiseService("ImageConverter", &ImageConverter::transformCB, this);
                                                                 ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:119:71: error: ‘tf::transform’ has not been declared
 int transform (pcl::PointCloud<pcl::PointXYZ>::Ptr& Cloud_kinect, tf::transform xxxxxxxxxxxxxx)
                                                                       ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int transform(pcl::PointCloud<pcl::PointXYZ>::Ptr&, int)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:123:7: error: ‘listener’ was not declared in this scope
       listener.lookupTransform("/turtle2", "/turtle1",
       ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:129:7: error: continue statement not within a loop
       continue;
       ^
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make: *** [all] Error 2
